# auto-duo

./: .gitignore  Cargo.toml  README.md
src/: main-discordwebhook.rs  main.rs
